[gd_scene load_steps=7 format=3 uid="uid://cdf6p7dii0so4"]

[ext_resource type="PackedScene" uid="uid://drtcjregoc22t" path="res://prefabs/car_black.tscn" id="1_2twad"]
[ext_resource type="Script" path="res://assets/scripts/Cars.gd" id="1_b12b4"]
[ext_resource type="PackedScene" uid="uid://bo7j7ta6878l0" path="res://prefabs/car_blue.tscn" id="2_je3a6"]
[ext_resource type="PackedScene" uid="uid://cb1djbt1qeyn8" path="res://prefabs/car_grey.tscn" id="3_q43b1"]
[ext_resource type="PackedScene" uid="uid://bqpi88rwngoih" path="res://prefabs/car_red.tscn" id="4_0dddp"]
[ext_resource type="PackedScene" uid="uid://w3hr3fd1r8wl" path="res://prefabs/car_white.tscn" id="5_x7ddl"]

[node name="Cars" type="Node3D"]
script = ExtResource("1_b12b4")

[node name="CarBlack" parent="." instance=ExtResource("1_2twad")]

[node name="CarBlue" parent="." groups=["car"] instance=ExtResource("2_je3a6")]

[node name="CarGrey" parent="." groups=["car"] instance=ExtResource("3_q43b1")]

[node name="CarRed" parent="." groups=["car"] instance=ExtResource("4_0dddp")]

[node name="CarWhite" parent="." groups=["car"] instance=ExtResource("5_x7ddl")]
